<?xml version="1.0"?>
<package>
  <name>plen_camera_view</name>
  <version>1.0.0</version>
  <description>The plen_camera_view package</description>

  <maintainer email="y.kaji.oita@gmail.com">Yugo Kajiwara</maintainer>

  <license>MIT</license>

  <author email="y.kaji.oita@gmail.com">Yugo Kajiwara</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
